[package]
name = "bevy_mod_rounded_box"
version = "0.1.0"
authors = ["Robin KAY <komadori@gekkou.co.uk>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A rounded box shape for Bevy."
repository = "https://github.com/komadori/bevy_mod_rounded_box/"
keywords = ["gamedev", "bevy", "rounded", "box", "cube"]
categories = ["game-engines", "rendering"]

[dependencies]
bevy = { version = "0.7", default-features = false, features = [
    "render",
] }

[dev-dependencies]
bevy = "0.7"

[[example]]
name = "cube"
path = "examples/cube.rs"
