[package]
name = "bevy_mod_rounded_box"
version = "0.10.0"
authors = ["Robin KAY <komadori@gekkou.co.uk>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A rounded box shape for Bevy."
readme = "README.md"
homepage = "https://github.com/komadori/bevy_mod_rounded_box/"
repository = "https://github.com/komadori/bevy_mod_rounded_box/"
keywords = ["gamedev", "bevy", "rounded", "box", "cube"]
categories = ["game-engines", "rendering"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
] }

[features]
uvf = []
default = ["uvf"]

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_winit",
    "tonemapping_luts",
    "x11",
    "png",
    "ktx2",
    "zstd",
] }

[[example]]
name = "cube"
path = "examples/cube.rs"
required-features = ["uvf"]
